# edu-cw-keyer

./: README.md
3d/: paddle-keyer.FCStd
doc/opis/: Makefile  main.tex
doc/opis/scripts/: draw_paris.py
doc/opis/sections/: content.tex
software/keyer-zephyr/: .clang-format  .gitignore  CMakeLists.txt  VERSION  app.overlay  prj.conf
software/keyer-zephyr/src/: CMakeLists.txt  config.hpp  decoder.cpp  decoder.hpp  keyer.cpp  keyer.hpp  main.cpp  projectConfig.hpp
